--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ dependencies = [
     "numpy>=1.24.0",
     "tqdm>=4.65.0",
     "wandb>=0.15.0",
-    "huggingface-hub>=0.19.0",
+    "huggingface-hub[cli]>=0.19.0",
     "diffusers>=0.35.1",
     "webdataset>=0.2.0",
 ]
